syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;v1";

//protoc -I. --proto_path=../../../third_party --go_out=. --go-grpc_out=. --gin_out=. user.proto

service User{
    rpc GetUserList(PageInfo) returns (UserListResponse); // 用户列表
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); //通过mobile查询用户
    rpc GetUserById(IdRequest) returns (UserInfoResponse); //通过id查询用户
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // 添加用户
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); // 更新用户
    rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse); //检查密码
    rpc AdminLogin(AdminLoginRequest) returns (LoginResponse); // 管理员登录
    rpc UserLogin(UserLoginRequest) returns (LoginResponse); // 用户登录
    rpc SendSms(SendSmsRequest) returns (SendSmsResponse); // 发送短信验证码
}

message PasswordCheckInfo {
    string password = 1;
    string encryptedPassword = 2;
}


message CheckResponse{
    bool success = 1;
}

message PageInfo {
    optional uint32 pn = 1;
    optional uint32 pSize = 2;
}

message MobileRequest{
    string mobile = 1;
}

message IdRequest {
    int32 id = 1;
}

message CreateUserInfo {
    string nickName = 1;
    string passWord = 2;
    string mobile = 3;
}

message UpdateUserInfo {
    int32 id = 1;
    optional string nickName = 2;
    optional string gender = 3;
    optional uint64 birthDay = 4;
}

message UserInfoResponse {
    int32 id = 1;
    string passWord = 2;
    string mobile = 3;
    string nickName = 4;
    uint64 birthDay = 5;
    string gender = 6;
    int32 role = 7;
}

message UserListResponse {
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}

// 管理员登录请求
message AdminLoginRequest {
    string mobile = 1;
    string password = 2;
    string captcha = 3;
    string captchaId = 4;
}

// 用户登录请求
message UserLoginRequest {
    string mobile = 1;
    string password = 2;
    string captcha = 3;
    string captchaId = 4;
}

// 登录响应
message LoginResponse {
    bool success = 1;
    string message = 2;
    string token = 3;
    UserInfoResponse userInfo = 4;
}

// 发送短信验证码请求
message SendSmsRequest {
    string mobile = 1;
    uint32 type = 2; // 1: 注册, 2: 登录
}

// 发送短信响应
message SendSmsResponse {
    bool success = 1;
    string message = 2;
}

// 更新用户状态请求
message UpdateUserStatusRequest {
    int32 userId = 1;
    int32 status = 2;
}